fix(header) - Actualisation de l'icône avec la dernière version de FontAwesome

--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -19,7 +19,7 @@
         <div class="logout-container">
             <a class="btn logout-btn warning-color" href="/logout">
                 <span>Se déconnecter</span>
-                <i class="fa fa-sign-out" aria-hidden="true"></i>
+                <i class="fa-solid fa-right-from-bracket"></i>
             </a>
         </div>
     </nav>
