feat(login) - Arrière plan d'authentification dynamique

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Se connecter{% endblock %}
 
+{% block body_attributes %}
+    style="background-color: var(--login-background-color);"
+{% endblock %}
+
 {% block main_attributes %}
     class="login-main"
 {% endblock %}
