--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -355,8 +355,8 @@ GESTION
     margin: 0.5rem 0;
 }
 
-.table-panel svg {
-    width: 25px;
+.table-panel i {
+    font-size: 1.5rem;
 }
 
 .table-textfield {
