--- a/templates/formation/formation.html.twig
+++ b/templates/formation/formation.html.twig
@@ -47,60 +47,7 @@
             </td>
         </tr>
         {% for formation in formations %}
-            {% set afficher = false %}
-
-            {% if 'ROLE_ADMIN' in app.user.roles %}
-                {% set afficher = true %}
-            {% else %}
-                {% for fc in formation.competences %}
-                    {% for uc in app.user.competences %}
-                        {% if fc.competence.nom == uc.competence.nom %}
-                            {% set afficher = true %}
-                        {% endif %}
-                    {% endfor %}
-                    {% if afficher %}{% endif %}
-                {% endfor %}
-            {% endif %}
-
-            {% if afficher %}
-            <tr>
-                <td>
-                    <input type="checkbox">
-                </td>
-                <td>
-                    {{ formation.titre }}
-                </td>
-                <td class="truncate">
-                    {{ formation.description }}
-                </td>
-                <td>
-                    {% for fc in formation.competences %}
-                        {{ fc.competence.nom }}{% if not loop.last %}, {% endif %}
-                    {% endfor %}
-                    
-                </td>
-                <td>
-                    <div class="file-selector-container" data-row-id={{ formation.id }}>
-                        <i class="fa-solid fa-plus"></i>
-                    </div>
-                    <input type="file" class="file-selector-input" data-row-id={{ formation.id }} hidden>
-                </td>
-                <td>
-                    {% if formation.estVisible == 1 %}
-                    <input type="checkbox" checked>
-                    {% else %}
-                    <input type="checkbox">
-                    {% endif %}
-                </td>
-                <td>
-                    <i class="fa-solid fa-pen"></i>
-                    <form method="post" action="{{ path('app_formation_delete', {'id':formation.id}) }}" style="display:inline">
-                    <button type="submit" class="utility-button" title="supression" onclick="return confirm('Etes-vous sûr de vouloir supprimer cette formation ?';)">
-                    <i class="fa-solid fa-xmark"></i>
-                    </form>
-                </td>
-            </tr>
-            {% endif %}
+            {% include 'includes/_row_table.html.twig' with {'formation': formation} %}
         {% endfor %}
     </tbody>
 </table>
