--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -363,9 +363,11 @@ GESTION
     width: 100%;
     padding: 0.5rem;
     border: none;
+    border-radius: 5px;
 }
 
 .file-selector-container {
+    border-radius: 5px;
     background-color: white;
     padding: 1rem 3rem;
 }
