--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
             :root {
                 --primary-color:{{ parametres.getParametre("primary_color", "#A2BF3D") }} ;
                 --utility-button:{{ parametres.getParametre("utility_button", "#6F82FF") }} ;
-                --warning-color:{{ parametres.getParametre("warning_button", "#FF0000") }} ;
+                --warning-button:{{ parametres.getParametre("warning_button", "#FF0000") }} ;
                 --background-color:{{ parametres.getParametre("background_color", "#ffffff") }} ;
                 --login-background-color:{{ parametres.getParametre("login_background_color", "#A2BF3D") }} ;
             }
