--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="logout-container">
-            <a class="btn logout-btn warning-color" href="/logout">
+            <a class="btn logout-btn warning-button" href="/logout">
                 <span>Se déconnecter</span>
                 <i class="fa-solid fa-right-from-bracket"></i>
             </a>
