--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,7 +31,7 @@
                     Tu es connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
                 </div>
             {% endif %}
-            <button class="btn login-btn utility-color" type="submit">Se connecter</button>
+            <button class="btn login-btn utility-button" type="submit">Se connecter</button>
             {#
                 Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
                 See https://symfony.com/doc/current/security/remember_me.html
