--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -56,7 +56,7 @@
                 <input class="textfield form-control" type="password" name="_confirm_password" id="confirm_password" autocomplete="current-password" required>
             </div>
         </div>
-        <button class="btn settings-btn warning-color" type="submit">Changer mon mot de passe</button>
+        <button class="btn settings-btn warning-button" type="submit">Changer mon mot de passe</button>
     </form>
 </div>
 <div class="settings-container">
@@ -65,7 +65,7 @@
             <div class="line"></div>
         </div>
         <p>Cette section est consacrée au contact du support de l’application. A travers des tickets, vous pouvez faire remonter des bugs, proposer des pistes d’améliorations ou des idées de formations...</p>
-        <a class="btn settings-btn utility-color">Envoyer un Ticket</a>
+        <a class="btn settings-btn utility-button">Envoyer un Ticket</a>
 </div>
 
 {% endblock %}
