--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -1,15 +1,15 @@
 <header>
     <nav id="header-nav">
         <div id="header-nav-left-side">
-            <a id="header-logo-container" href="{{ path('app_home') }}">
-                <img id="header-logo" alt="Accueil" src="{{ asset('img/logo.png') }}">
+            <a id="header-logo-container" href={{ path('app_home') }}>
+                <img id="header-logo" alt="Accueil" src={{ asset('img/logo.png') }}>
             </a>
             <div id="header-nav-links">
             {% if is_granted('ROLE_ADMIN') %}
-                <a href="{{ path('app_admin_dashboard') }}">Administration</a>
+                <a href={{ path('app_admin_dashboard') }}>Administration</a>
             {% endif %}
-                <a href="{{ path('app_formation') }}">Formation</a>
-                <a href="{{ path('app_account') }}">Compte</a>
+                <a href={{ path('app_formation') }}>Formation</a>
+                <a href={{ path('app_account') }}>Compte</a>
             </div>
         </div>
         <div class="logout-container">
