fix(formation) - Mauvaise syntaxe pour la route (app_formation_creer > app_formation_create)

--- a/templates/formation/formation.html.twig
+++ b/templates/formation/formation.html.twig
@@ -4,7 +4,7 @@
 
 {% block main %}
 <h1>Formations</h1>
-<form id="formation-create-form" action="{{ path('app_formation_creer') }}" method="post">
+<form id="formation-create-form" action="{{ path('app_formation_create') }}" method="post">
 <table class="table-panel">
     <thead>
         <tr>
