fix(formation) - Modification de la route (app_formation > app_crud_formation), pour distinguer de la page individuelle de formation

--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -4,7 +4,7 @@
             <a href={{ path('app_admin_dashboard') }}>
                 <i class="fa-solid fa-toolbox"></i>
             </a>
-            <a href={{ path('app_formation') }}>
+            <a href={{ path('app_crud_formation') }}>
                 <i class="fa-solid fa-chalkboard-user"></i>
             </a>
             <a href={{ path('app_account') }}>
