--- a/templates/includes/_row_table.html.twig
+++ b/templates/includes/_row_table.html.twig
@@ -27,7 +27,7 @@
             {% for fc in formation.competences %}
                 {{ fc.competence.nom }}{% if not loop.last %}, {% endif %}
             {% endfor %}
-            
+            <i class="fa-solid fa-plus"></i>
         </td>
         <td>
             <div class="file-selector-container" data-row-id={{ formation.id }}>
