fix(admin_dashboard) - Modification des liens pour qu'ils soient dynamiques en cas de changement de la route dans les controllers

--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -11,8 +11,8 @@
     </div>
     <p>Cette section est consacrée a la gestion des utilisateurs, des services et des salles.</p>
     <div class="admin-settings-buttons settings-btn "> 
-        <a href="/admin/utilisateur"> <button class="btn admin-btn settings-button utility-button"> Gérer les utilisateurs </button> </a>
-        <a href="/admin/#"> <button class="btn admin-btn utility-button"> Gérer les services </button> </a>
+        <a href={{ path('app_crud_utilisateur') }}> <button class="btn admin-btn settings-button utility-button"> Gérer les utilisateurs </button> </a>
+        <a href={{ path('app_crud_service') }}> <button class="btn admin-btn utility-button"> Gérer les services </button> </a>
         <a href="/admin/#"> <button class="btn admin-btn utility-button"> Gérer les salles </button> </a>
     </div>
 </div>
@@ -23,8 +23,8 @@
     </div>
     <p>Cette section est consacrée à la gestion des formations et de leurs sessions.</p>
     <div class="admin-settings-buttons responsiv settings-btn"> 
-        <a href="/formation"> <button class="btn responsiv admin-btn utility-button"> Gérer les formations </button> </a>
-        <a href="/admin/#"> <button class="btn responsiv admin-btn utility-button"> Gérer les sessions de formations </button> </a>
+        <a href={{ path('app_crud_formation') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les formations </button> </a>
+        <a href={{ path('app_crud_session') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les sessions de formations </button> </a>
         <a href="/admin/#"> <button class="btn responsiv admin-btn utility-button"> Gérer les compétences </button> </a>
     </div>
 </div>
