fix(salles) - Correction de l'erreur de la mise en page

--- a/templates/crud/salles.html.twig
+++ b/templates/crud/salles.html.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout/main.html.twig' %}
 
-{% block title %}Salles{% endblock %}
+{% block title %}Formations{% endblock %}
 
-{% block body %}
+{% block main %}
 
 {% endblock %}
