fix - Renommage des titres des différentes pages

--- a/templates/crud/utilisateurs.html.twig
+++ b/templates/crud/utilisateurs.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout/main.html.twig' %}
 
-{% block title %}Formations{% endblock %}
+{% block title %}Utilisateurs{% endblock %}
 
 {% block main %}
 <h1>Utilisateurs</h1>
