--- a/templates/crud/salles.html.twig
+++ b/templates/crud/salles.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout/main.html.twig' %}
 
-{% block title %}Formations{% endblock %}
+{% block title %}Salles{% endblock %}
 
 {% block main %}
 
