--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -6,16 +6,8 @@
     class="settings-main"
 {% endblock %}
 
-
 {% block main %}
-<style>
-    body {
-        background-color : white;
-    }
-</style>
-
-
-<h1 class="h1 title-main">Paramètres</h1><i class="fa-solid fa-right-from-bracket"></i>
+<h1 class="h1 title-main">Paramètres</h1>
 <div class="settings-container">
     <div class="settings-title-container">
         <h2 class="h2 settings-title">Mon Compte</h2>
