feat(admin_dashboard) - Intégration du dashboard personnalisé avec EasyAdmin

--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,7 +1,7 @@
 <footer>
     <nav id="footer-nav">
         <div id="footer-nav-links">
-            <a href={{ path('app_admin_dashboard') }}>
+            <a href={{ path('app_admin') }}>
                 <i class="fa-solid fa-toolbox"></i>
             </a>
             <a href={{ path('app_crud_formation') }}>
