--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -6,7 +6,7 @@
             </a>
             <div id="header-nav-links">
             {% if is_granted('ROLE_ADMIN') %}
-                <a href={{ path('app_admin_dashboard') }}>Administration</a>
+                <a href={{ path('app_admin') }}>Administration</a>
             {% endif %}
                 <a href={{ path('app_crud_formation') }}>Formation</a>
                 <a href={{ path('app_account') }}>Compte</a>
