refactor(admin_dashboard) - Correction des liens vers les pages CRUD gérées par EasyAdmin

--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -11,9 +11,9 @@
     </div>
     <p>Cette section est consacrée a la gestion des utilisateurs, des services et des salles.</p>
     <div class="admin-settings-buttons settings-btn "> 
-        <a href={{ path('app_crud_utilisateur') }}> <button class="btn admin-btn settings-button utility-button"> Gérer les utilisateurs </button> </a>
-        <a href={{ path('app_crud_service') }}> <button class="btn admin-btn utility-button"> Gérer les services </button> </a>
-        <a href={{ path('app_crud_salle') }}> <button class="btn admin-btn utility-button"> Gérer les salles </button> </a>
+        <a href={{ path('app_admin_utilisateur_index') }}> <button class="btn admin-btn settings-button utility-button"> Gérer les utilisateurs </button> </a>
+        <a href={{ path('app_admin_service_index') }}> <button class="btn admin-btn utility-button"> Gérer les services </button> </a>
+        <a href={{ path('app_admin_salle_index') }}> <button class="btn admin-btn utility-button"> Gérer les salles </button> </a>
     </div>
 </div>
 <div class="settings-container">
@@ -23,12 +23,12 @@
     </div>
     <p>Cette section est consacrée à la gestion des formations et de leurs sessions.</p>
     <div class="admin-settings-buttons responsiv settings-btn"> 
-        <a href={{ path('app_crud_formation') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les formations </button> </a>
-        <a href={{ path('app_crud_session') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les sessions de formations </button> </a>
-        <a href={{ path('app_crud_competence') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les compétences </button> </a>
+        <a href={{ path('app_admin_formation_index') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les formations </button> </a>
+        <a href={{ path('app_admin_session_index') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les sessions de formations </button> </a>
+        <a href={{ path('app_admin_competence_index') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les compétences </button> </a>
     </div>
 </div>
-<form method="post" action="{{ path('admin_update_colors') }}">
+<form method="post" action={{ path('app_admin_update_colors') }}>
     <div class="settings-container">
         <div class="settings-title-container">
             <h2 class="h2 settings-title">Charte graphique</h2>
