--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -4,7 +4,7 @@
             <a href={{ path('app_admin') }}>
                 <i class="fa-solid fa-toolbox"></i>
             </a>
-            <a href={{ path('app_crud_formation') }}>
+            <a href={{ path('app_admin_formation_index') }}>
                 <i class="fa-solid fa-chalkboard-user"></i>
             </a>
             <a href={{ path('app_account') }}>
