--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -8,7 +8,7 @@
             {% if is_granted('ROLE_ADMIN') %}
                 <a href={{ path('app_admin') }}>Administration</a>
             {% endif %}
-                <a href={{ path('app_admin_formation_index') }}>Formation</a>
+                <a href={{ path('app_formations') }}>Formation</a>
                 <a href={{ path('app_account') }}>Compte</a>
             </div>
         </div>
