--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,14 +13,14 @@
 {% block body %}
 <main class="login-main">
     <div class="login-panel">
-        <img class="login-panel-logo" src="{{ asset('img/logo.png') }}">
+        <img class="login-panel-logo" src={{ asset('img/logo.png') }}>
         <h1 class="h3 text-align-center">Bienvenue sur votre espace de formation</h1>
         <form method="post" class="login-form">
             <label for="username">Email</label>
-            <input class="textfield form-control" type="email" value="{{ last_username }}" name="_username" id="username" autocomplete="email" required autofocus>
+            <input class="textfield form-control" type="email" value={{ last_username }} name="_username" id="username" autocomplete="email" required autofocus>
             <label for="password">Mot de passe</label>
             <input class="textfield form-control" type="password" name="_password" id="password" autocomplete="current-password" required>
-            <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+            <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value={{ csrf_token('authenticate') }}>
             
             {% if error %}
                 <div class="alert alert-danger">Identifiants invalides</div>
@@ -28,7 +28,7 @@
 
             {% if app.user %}
                 <div class="mb-3">
-                    Tu es connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
+                    Tu es connecté en tant que {{ app.user.userIdentifier }}, <a href={{ path('app_logout') }}>Se déconnecter</a>
                 </div>
             {% endif %}
             <button class="btn login-btn utility-button" type="submit">Se connecter</button>
