--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,10 +6,6 @@
     style="background-color: var(--login-background-color);"
 {% endblock %}
 
-{% block main_attributes %}
-    class="login-main"
-{% endblock %}
-
 {% block body %}
 <main class="login-main">
     <div class="login-panel">
@@ -17,7 +13,7 @@
         <h1 class="h3 text-align-center">Bienvenue sur votre espace de formation</h1>
         <form method="post" class="login-form">
             <label for="username">Email</label>
-            <input class="textfield form-control" type="email" value={{ last_username }} name="_username" id="username" autocomplete="email" required autofocus>
+            <input class="textfield form-control" type="email" name="_username" id="username" autocomplete="email" required autofocus>
             <label for="password">Mot de passe</label>
             <input class="textfield form-control" type="password" name="_password" id="password" autocomplete="current-password" required>
             <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value={{ csrf_token('authenticate') }}>
