refactor(calendar) - Calendrier non éditable, sans les weekends, événements en rouge, événément au clic TEST

--- a/templates/formations/formations.html.twig
+++ b/templates/formations/formations.html.twig
@@ -11,8 +11,9 @@
 
         const calendar = new FullCalendar.Calendar(calendarEl, {
             defaultView: 'dayGridMonth',
-            editable: true,
+            editable: false,
             locale: 'fr',
+            weekends: false,
             firstDay: 1,
             eventSources: [
                 {
@@ -24,6 +25,7 @@
                     failure: () => {
                         // alert('There was an error while fetching FullCalendar!');
                     },
+                    color: 'red'
                 },
             ],
             eventTimeFormat: { // like '14:30:00'
@@ -31,6 +33,9 @@
                 minute: '2-digit',
                 second: '2-digit',
                 hour12: false
+            },
+            eventClick: () => {
+                console.log("TEST")
             },
             headerToolbar: {
                 start: 'prev,next today',
