--- a/templates/formations/formations.html.twig
+++ b/templates/formations/formations.html.twig
@@ -2,8 +2,7 @@
 
 {% block title %}Mes Formations{% endblock %}
 
-{% block main %}
-<div id="calendar-holder"></div>
+{% block javascripts %}
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -34,8 +33,12 @@
                 second: '2-digit',
                 hour12: false
             },
-            eventClick: () => {
-                console.log("TEST")
+            eventClick: (info) => {
+                info.jsEvent.preventDefault(); // don't let the browser navigate
+
+                if (info.event.url) {
+                window.open(info.event.url);
+                }
             },
             headerToolbar: {
                 start: 'prev,next today',
@@ -48,5 +51,8 @@
             calendar.render();
         });
     </script>
-</div>
+{% endblock %}
+
+{% block main %}
+<div id="calendar-holder"></div>
 {% endblock %}
