style(home) - Correction de la mise en forme du texte Aucune Formation disponible

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -16,7 +16,7 @@
     {% endfor %}
 
     {% if formationsDisponibles is empty %}
-        <h2>Aucune formation disponible.</h2>
+        <p>Aucune formation disponible.</hp>
     {% endif %}
 </div>
 {% endblock %}
