--- a/templates/formations/formations.html.twig
+++ b/templates/formations/formations.html.twig
@@ -5,7 +5,7 @@
 {% block javascripts %}
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
+        document.addEventListener('turbo:load', () => {
         const calendarEl = document.getElementById('calendar-holder');
 
         const calendar = new FullCalendar.Calendar(calendarEl, {
