--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -289,6 +289,27 @@ LOGIN PAGE
     margin-top: 4rem;
 }
 
+
+/*
+---------------------------------------------- 
+HOME PAGE
+---------------------------------------------- 
+*/
+
+.home-formation-container {
+    padding: 2rem;
+    margin: 1rem 0;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.home-formation-session {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
 /*
 ---------------------------------------------- 
 ACCOUNT PAGE
@@ -437,13 +458,6 @@ MEDIA QUERIES
     /* Facultatif : pour éviter des effets visuels bizarres */
     word-break: break-word;
 
-}
-
-.formation-session {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 1rem;
 }
 
 .session_title_container {
