--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -15,17 +15,15 @@
             </div>
             <h3>Sessions</h3>
             <ul>
-            {% for session in formation.sessions %}
-                {% if (session.getNbParticipantsRestants() >= 1) or (session.id in participationsSessionsId) %}
-                    <li class="home-formation-session">
-                    <a href={{ path('app_session', {id: session.id}) }}>{{ session.titre }} - {{ session.getNbParticipantsRestants() }} restantes / {{ session.getNbParticipantsMax() }} places </span>
-                    {% if session.id in participationsSessionsId %}
-                        <a href={{ path('app_session_desinscription', {id: session.id}) }} class="btn warning-button">Se désinscrire</a>
-                    {% else %}
-                        <a href={{ path('app_session_inscription', {id: session.id}) }} class="btn utility-button">S'inscrire</a>
-                    {% endif %}
-                    </li>
+            {% for session in formation.getSessionsVisibles(app.user) %}
+                <li class="home-formation-session">
+                <a href={{ path('app_session', {id: session.id}) }}>{{ session.titre }} - {{ session.getNbParticipantsRestants() }} restantes / {{ session.getNbParticipantsMax() }} places </span>
+                {% if session.estParticipant(app.user) %}
+                    <a href={{ path('app_session_desinscription', {id: session.id}) }} class="btn warning-button">Se désinscrire</a>
+                {% else %}
+                    <a href={{ path('app_session_inscription', {id: session.id}) }} class="btn utility-button">S'inscrire</a>
                 {% endif %}
+                </li>
             {% endfor %}
             </ul>
         </div>
